--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,8 @@
     },
     "lib": ["dom", "es2015", "es2016"]
   },
-  "exclude": ["artifacts/**/*", "dist/**/*", "public/**/*", "node_modules"]
+  "exclude": ["artifacts/**/*", "dist/**/*", "public/**/*", "node_modules"],
+  "paths": {
+    "@components/*": ["src/components/*"]
+  },
 }
