--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.9.9",
+    "@material-ui/icons": "^4.9.1",
     "@reach/router": "^1.2.1",
     "axios": "^0.19.0",
     "react": "^16.9.0",
