--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@material-ui/core": "^4.9.9",
     "@material-ui/icons": "^4.9.1",
     "@reach/router": "^1.2.1",
+    "@types/marked": "^0.7.3",
     "axios": "^0.19.0",
+    "gray-matter": "^4.0.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-jss": "^8.0.0",
+    "react-markdown": "^4.3.1",
     "react-static": "^7.2.3",
     "react-static-plugin-jss": "^7.2.2",
     "react-static-plugin-reach-router": "^7.2.0",
