--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "allowJs": false,
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "removeComments": false,
@@ -17,14 +17,31 @@
     "noEmit": true,
     "baseUrl": ".",
     "paths": {
-      "components/*": ["src/components/*"],
-      "containers/*": ["src/containers/*"],
-      "types/*": ["types/*"]
+      "components/*": [
+        "src/components/*"
+      ],
+      "containers/*": [
+        "src/containers/*"
+      ],
+      "types/*": [
+        "types/*"
+      ]
     },
-    "lib": ["dom", "es2015", "es2016"]
+    "lib": [
+      "dom",
+      "es2015",
+      "es2016"
+    ]
   },
-  "exclude": ["artifacts/**/*", "dist/**/*", "public/**/*", "node_modules"],
+  "exclude": [
+    "artifacts/**/*",
+    "dist/**/*",
+    "public/**/*",
+    "node_modules"
+  ],
   "paths": {
-    "@components/*": ["src/components/*"]
+    "@components/*": [
+      "src/components/*"
+    ]
   },
 }
