--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/marked": "^0.7.3",
     "axios": "^0.19.0",
     "gray-matter": "^4.0.2",
+    "netlify": "^4.0.5",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-ga": "^2.7.0",
