--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,6 @@ public/images/pp.jpg filter=lfs diff=lfs merge=lfs -text
 public/images/pp1.jpg filter=lfs diff=lfs merge=lfs -text
 public/images/pp2.jpg filter=lfs diff=lfs merge=lfs -text
 public/images/pp3.jpg filter=lfs diff=lfs merge=lfs -text
+public/images/ filter=lfs diff=lfs merge=lfs -text
+public/images/posts/new-blog filter=lfs diff=lfs merge=lfs -text
+public/images/posts/new-blog/stay-home.jpg filter=lfs diff=lfs merge=lfs -text
