--- a/.gitattributes
+++ b/.gitattributes
@@ -8,3 +8,6 @@ public/images/pp3.jpg filter=lfs diff=lfs merge=lfs -text
 public/images/ filter=lfs diff=lfs merge=lfs -text
 public/images/posts/new-blog filter=lfs diff=lfs merge=lfs -text
 public/images/posts/new-blog/stay-home.jpg filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
+*.jpg filter=lfs diff=lfs merge=lfs -text
+*.jpeg filter=lfs diff=lfs merge=lfs -text
