Started solar-system post

--- a/.gitattributes
+++ b/.gitattributes
@@ -11,3 +11,4 @@ public/images/posts/new-blog/stay-home.jpg filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
 *.jpeg filter=lfs diff=lfs merge=lfs -text
+*.gif filter=lfs diff=lfs merge=lfs -text
